# resolv-ml

./: .gitignore  README.md  pyproject.toml
src/resolv_ml/models/nn/: base.py  cnn.py  denoisers.py  embeddings.py  film.py
src/resolv_ml/models/seq2seq/: base.py
src/resolv_ml/models/vae/: ar_vae.py  base.py
src/resolv_ml/training/: callbacks.py  trainer.py
src/resolv_ml/utilities/: training.py  utils.py
src/resolv_ml/utilities/bijectors/: __init__.py  base.py  batch_norm.py  power_transform.py
src/resolv_ml/utilities/distributions/: divergence.py  inference.py  power_transforms.py
src/resolv_ml/utilities/math/: __init__.py  distances.py
src/resolv_ml/utilities/nn/: rnn.py
src/resolv_ml/utilities/regularizers/: attribute.py  base.py  codebook.py  divergence.py
src/resolv_ml/utilities/schedulers/: __init__.py  base.py  functions.py  noise.py
src/resolv_ml/utilities/statistic/: __init__.py  power_transforms.py
src/resolv_ml/utilities/tensors/: ops.py
tests/data/: pitchseq.tfrecord  test_pitchseq.tfrecord  train_pitchseq.tfrecord  trainer_config.json  validation_pitchseq.tfrecord
tests/models/dlvms/diffusion/: ddim_test.py  ddpm_test.py
tests/models/dlvms/misc/: latent_diffusion_test.py
tests/models/dlvms/vae/: ar_vae_test.py  standard_vae_test.py  vq_vae_test.py
tests/models/seq2seq/rnn/: rnn_decoders_test.py  (+2 more)
tests/training/: diffusion_trainer_test.py  trainer_test.py  utils.py  vae_trainer_test.py
tests/utilities/distributions/: divergence_test.py  inference_test.py  power_transforms_test.py
tests/utilities/statistic/: power_transforms_test.py
(+21 files in other folders)
